feat: add remove item from cart - checkout - update quantities