@@ -3,21 +3,30 @@ package com.mentorship.food_delivery_app.cart.service;
 import com.mentorship.food_delivery_app.cart.dto.AddToCartRequestDTO;
 import com.mentorship.food_delivery_app.cart.dto.CartItemResponseDTO;
 import com.mentorship.food_delivery_app.cart.dto.CartResponseDTO;
+import com.mentorship.food_delivery_app.cart.dto.CheckoutCartRequestDTO;
 import com.mentorship.food_delivery_app.cart.dto.UpdateCartItemRequestDTO;
+import com.mentorship.food_delivery_app.cart.exceptions.CartItemNotFoundException;
+import com.mentorship.food_delivery_app.cart.exceptions.CartLockedException;
+import com.mentorship.food_delivery_app.cart.exceptions.CartNotFoundException;
+import com.mentorship.food_delivery_app.cart.exceptions.EmptyCartException;
+import com.mentorship.food_delivery_app.cart.exceptions.MenuItemNotFoundException;
 import com.mentorship.food_delivery_app.cart.entity.Cart;
 import com.mentorship.food_delivery_app.cart.entity.CartItem;
 import com.mentorship.food_delivery_app.cart.repository.CartItemRepository;
 import com.mentorship.food_delivery_app.cart.repository.CartRepository;
 import com.mentorship.food_delivery_app.cart.repository.MenuItemRepository;
+import com.mentorship.food_delivery_app.order.dto.OrderResponseDTO;
+import com.mentorship.food_delivery_app.order.service.OrderService;
 import com.mentorship.food_delivery_app.restaurant.entity.MenuItem;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.util.StringUtils;
 
 import java.math.BigDecimal;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * Service class for Cart operations.
@@ -30,6 +39,7 @@ public class CartService {
     private final CartRepository cartRepository;
     private final MenuItemRepository menuItemRepository;
     private final CartItemRepository cartItemRepository;
+    private final OrderService orderService;
 
     /**
      * Retrieves the cart for a user and calculates all totals.
@@ -46,21 +56,61 @@ public class CartService {
     @Transactional
     public CartResponseDTO updateCartItem(Long customerId, Long menuItemId, UpdateCartItemRequestDTO request) {
         Cart cart = findCartByCustomerId(customerId);
-
-        if (Boolean.TRUE.equals(cart.getIsLocked())) {
-            throw new RuntimeException("Cart is locked and cannot be modified");
-        }
-
-        CartItem item = cart.getItems().stream()
-                .filter(i -> i.getMenuItem().getId().equals(menuItemId))
-                .findFirst()
-                .orElseThrow(() -> new RuntimeException(
-                        "Menu item " + menuItemId + " is not in the cart for customer " + customerId));
+        validateCartIsMutable(cart, "updated");
+        CartItem item = findCartItem(cart, customerId, menuItemId);
 
         item.setQuantity(request.getQuantity());
         item.setNote(request.getNote());
 
         return buildCartResponse(cart);
+    }
+
+    /**
+     * Updates the quantity only for a cart item.
+     */
+    @Transactional
+    public CartResponseDTO updateItemQuantity(Long customerId, Long menuItemId, Integer quantity) {
+        Cart cart = findCartByCustomerId(customerId);
+        validateCartIsMutable(cart, "updated");
+
+        CartItem item = findCartItem(cart, customerId, menuItemId);
+        item.setQuantity(quantity);
+
+        return buildCartResponse(cart);
+    }
+
+    /**
+     * Removes a single item from the customer's cart.
+     */
+    @Transactional
+    public CartResponseDTO removeCartItem(Long customerId, Long menuItemId) {
+        Cart cart = findCartByCustomerId(customerId);
+        validateCartIsMutable(cart, "modified");
+
+        CartItem item = findCartItem(cart, customerId, menuItemId);
+        cart.removeItem(item);
+        resetCartMetadataIfEmpty(cart);
+
+        return buildCartResponse(cart);
+    }
+
+    /**
+     * Converts the customer's cart into an order snapshot and clears the active cart.
+     */
+    @Transactional
+    public OrderResponseDTO checkoutCart(Long customerId, CheckoutCartRequestDTO request) {
+        Cart cart = findCartByCustomerId(customerId);
+        validateCartIsMutable(cart, "checked out");
+        ensureCartHasItems(customerId, cart);
+
+        String checkoutNote = request != null ? request.getNote() : null;
+        OrderResponseDTO orderResponse = orderService.createOrderFromCart(cart, checkoutNote);
+
+        cart.clearItems();
+        cart.setNotes(null);
+        cart.setRestaurantId(null);
+
+        return orderResponse;
     }
 
     /**
@@ -70,25 +120,21 @@ public class CartService {
     @Transactional
     public void clearCart(Long customerId) {
         Cart cart = findCartByCustomerId(customerId);
-
-        if (Boolean.TRUE.equals(cart.getIsLocked())) {
-            throw new RuntimeException("Cart is locked and cannot be cleared");
-        }
-
-        cart.getItems().clear();
-        cart.setRestaurantId(null);
-        cart.setNotes(null);
+        validateCartIsMutable(cart, "cleared");
+        cart.clearItems();
+        resetCartMetadataIfEmpty(cart);
     }
 
     private Cart findCartByCustomerId(Long customerId) {
         return cartRepository.findByCustomerId(customerId)
-                .orElseThrow(() -> new RuntimeException("Cart not found for customer ID: " + customerId));
+                .orElseThrow(() -> new CartNotFoundException(customerId));
     }
 
     private CartResponseDTO buildCartResponse(Cart cart) {
         List<CartItemResponseDTO> itemDTOs = cart.getItems().stream()
+                .sorted(Comparator.comparing(item -> item.getMenuItem().getId()))
                 .map(this::mapToItemDTO)
-                .collect(Collectors.toList());
+                .toList();
 
         BigDecimal grandTotal = itemDTOs.stream()
                 .map(CartItemResponseDTO::getSubtotal)
@@ -109,38 +155,28 @@ public class CartService {
      */
     @Transactional
     public CartResponseDTO addItemToCart(Long customerId, AddToCartRequestDTO request) {
-        // 1. Fetch the customer's cart — throw if not found
-        Cart cart = cartRepository.findByCustomerId(customerId)
-                .orElseThrow(() -> new RuntimeException("Cart not found for customer ID: " + customerId));
+        Cart cart = findCartByCustomerId(customerId);
+        validateCartIsMutable(cart, "modified");
 
-        // 2. Guard: reject if cart is locked (e.g. order already placed)
-        if (Boolean.TRUE.equals(cart.getIsLocked())) {
-            throw new RuntimeException("Cart is locked and cannot be modified for customer ID: " + customerId);
-        }
-
-        // 3. Fetch the MenuItem — throw if it doesn't exist
         MenuItem menuItem = menuItemRepository.findById(request.getMenuItemId())
-                .orElseThrow(() -> new RuntimeException("Menu item not found with ID: " + request.getMenuItemId()));
+                .orElseThrow(() -> new MenuItemNotFoundException(request.getMenuItemId()));
 
-        // 4. Check if this item is already in the cart
         Optional<CartItem> existingItemOpt = cartItemRepository.findByCartIdAndMenuItemId(
                 cart.getId(), menuItem.getId()
         );
 
         if (existingItemOpt.isPresent()) {
-            // 4a. Item exists → just increase the quantity
             CartItem existingItem = existingItemOpt.get();
             existingItem.setQuantity(existingItem.getQuantity() + request.getQuantity());
+            if (StringUtils.hasText(request.getNote())) {
+                existingItem.setNote(request.getNote());
+            }
         } else {
-            // 4b. New item → create and add to cart's item list
             CartItem newItem = new CartItem(cart, menuItem, request.getQuantity(), request.getNote());
-            cart.getItems().add(newItem);
+            cart.addItem(newItem);
         }
 
-        // 5. Save the cart — CascadeType.ALL on Cart.items will persist the CartItem automatically
         cartRepository.save(cart);
-
-        // 6. Return the updated cart as a response DTO
         return getCartByCustomerId(customerId);
     }
 
@@ -149,14 +185,39 @@ public class CartService {
      */
     private CartItemResponseDTO mapToItemDTO(CartItem item) {
         BigDecimal unitPrice = item.getMenuItem().getPrice();
-        BigDecimal subtotal = unitPrice.multiply(new BigDecimal(item.getQuantity()));
+        BigDecimal subtotal = unitPrice.multiply(BigDecimal.valueOf(item.getQuantity()));
 
         return new CartItemResponseDTO(
+                item.getMenuItem().getId(),
                 item.getMenuItem().getName(),
                 item.getQuantity(),
                 unitPrice,
                 subtotal,
                 item.getNote()
         );
+    }
+
+    private void validateCartIsMutable(Cart cart, String action) {
+        if (Boolean.TRUE.equals(cart.getIsLocked())) {
+            throw new CartLockedException(cart.getId(), action);
+        }
+    }
+
+    private CartItem findCartItem(Cart cart, Long customerId, Long menuItemId) {
+        return cartItemRepository.findByCartIdAndMenuItemId(cart.getId(), menuItemId)
+                .orElseThrow(() -> new CartItemNotFoundException(customerId, menuItemId));
+    }
+
+    private void ensureCartHasItems(Long customerId, Cart cart) {
+        if (!cartItemRepository.existsByCartId(cart.getId())) {
+            throw new EmptyCartException(customerId);
+        }
+    }
+
+    private void resetCartMetadataIfEmpty(Cart cart) {
+        if (cart.getItems().isEmpty()) {
+            cart.setRestaurantId(null);
+            cart.setNotes(null);
+        }
     }
 }
